# CMake-Simple-Library-App

./: .gitignore  CMakeLists.txt
Application/: CMakeLists.txt
Application/src/: main.cpp
